--- a/style.css
+++ b/style.css
@@ -13,9 +13,20 @@ body,html {
 .keys {
   display: flex;
   flex: 1;
-  min-height: 100vh;
+  min-height: 50vh;
   align-items: center;
   justify-content: center;
+}
+
+.transport {
+  display: flex;
+  flex: 1;
+  min-height: 50vh;
+  align-items: center;
+  justify-content: center;
+}
+button{
+  font-size: 156px;
 }
 
 .key {
